# Six-Robotics-Vex-Bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  auton_path_calc  compile_commands.json  project.pros  pros-setup.sh  test_path.json
examples/: dev_branch.cpp
include/: main.h
src/: PID.cpp  PID.h  auton_path_parser.cpp  auton_path_parser.h  autonomous.cpp  autonomous.h  controllers.h  drive.cpp  drive.h  encoders.h  globals.h  hardware.h  inertial.cpp  inertial.h  initialize.cpp  kalman_filter.cpp  kalman_filter.h  main.cpp  mechanisms.cpp  mechanisms.h  misc.h  motor_gearsets.cpp  motor_gearsets.h  motor_ports.h  motors.h  odometery.cpp  odometery.h  opcontrol.cpp  opcontrol_old.cpp  ports.h  sensors.cpp  vision.cpp  vision.h
src/auton_editor_lib/: auton_path_parser.cpp  auton_path_parser.h
src/auton_paths/: auton_paths.h  five_stack.cpp  other.cpp  skills.cpp
src/headers/: PID.h  controllers.h  encoders.h  kalman_filter.h  misc.h  motor_ports.h  motors.h  ports.h  sensors.h
src/robot/: controllers.h  encoders.h  motors.h  ports.h  robot.cpp  robot.h
src/robot/components/: drive.cpp  drive.h  mechanisms.cpp  mechanisms.h  motion_tracker.cpp  motion_tracker.h  motor_gearsets.cpp  motor_gearsets.h  move_to_point.cpp  move_to_point.h  move_to_point_simple.cpp  move_to_point_simple.h  old mechanisms.txt
src/robot/motion_control/: PID.cpp  PID.h  action_queue.cpp  action_queue.h  auton.cpp  auton.h  encoders.h  kalman_filter.cpp  kalman_filter.h  motion_tracker.cpp  motion_tracker.h
src/robot/old/: motion_tracker.cpp  move_to_point.cpp  move_to_point.h  move_to_point_simple.cpp
src/tests/: PID.cpp  pid_test.h
src/utils/: action_queue.h  math.cpp  math.h  vector2.cpp  vector2.h
vex_coding_studio/: vision_config.h
